# todo/todo-service/swagger/swagger.yaml
@@ -44,9 +44,6 @@ definitions:
         description: Todo item title.
         example: Nostrum accusantium molestias blanditiis nam.
         type: string
-    required:
-    - id
-    - createdAt
     title: Todo
     type: object
   TodoMedia:
@@ -104,16 +101,54 @@ definitions:
       $ref: '#/definitions/TodoMedia'
     title: 'Mediatype identifier: application/json; type=collection; view=default'
     type: array
+  error:
+    description: Error response media type (default view)
+    example:
+      code: invalid_value
+      detail: Value of ID must be an integer
+      id: 3F1FKVRR
+      meta:
+        timestamp: 1.458609e+09
+      status: "400"
+    properties:
+      code:
+        description: an application-specific error code, expressed as a string value.
+        example: invalid_value
+        type: string
+      detail:
+        description: a human-readable explanation specific to this occurrence of the
+          problem.
+        example: Value of ID must be an integer
+        type: string
+      id:
+        description: a unique identifier for this particular occurrence of the problem.
+        example: 3F1FKVRR
+        type: string
+      meta:
+        additionalProperties: true
+        description: a meta object containing non-standard meta-information about
+          the error.
+        example:
+          timestamp: 1.458609e+09
+        type: object
+      status:
+        description: the HTTP status code applicable to this problem, expressed as
+          a string value.
+        example: "400"
+        type: string
+    title: 'Mediatype identifier: application/vnd.goa.error; view=default'
+    type: object
 host: localhost:8080
 info:
   title: Micro Todo
   version: ""
 paths:
-  /:
+  /todo:
     get:
       operationId: todo#list
       produces:
       - application/json; type=collection
+      - application/vnd.goa.error
       responses:
         "200":
           description: OK
@@ -121,6 +156,8 @@ paths:
             $ref: '#/definitions/TodoMediaCollection'
         "500":
           description: Internal Server Error
+          schema:
+            $ref: '#/definitions/error'
       schemes:
       - http
       summary: list todo
@@ -135,14 +172,19 @@ paths:
         schema:
           $ref: '#/definitions/Todo'
       produces:
+      - application/vnd.goa.error
       - text/plain
       responses:
         "200":
           description: OK
         "400":
           description: Bad Request
+          schema:
+            $ref: '#/definitions/error'
         "500":
           description: Internal Server Error
+          schema:
+            $ref: '#/definitions/error'
       schemes:
       - http
       summary: add todo
@@ -154,10 +196,6 @@ produces:
 - application/gob
 - application/x-gob
 responses:
-  BadRequest:
-    description: Bad Request
-  InternalServerError:
-    description: Internal Server Error
   OK:
     description: OK
 schemes:
